refactor dockerization to integrate spring and flask